--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,12 @@
 {
     "editor.tabSize": 4,
     "editor.formatOnSave": true,
-    "editor.codeActionsOnSave": ["source.organizeImports", "source.fixAll"],
+    "editor.codeActionsOnSave": [
+        "source.organizeImports",
+        "source.fixAll"
+    ],
     "typescript.tsdk": "node_modules/typescript/lib",
-    "files.associations": { "*.css": "tailwindcss" }
+    "files.associations": {
+        "*.css": "tailwindcss"
+    }
 }
