--- a/package.json
+++ b/package.json
@@ -7,36 +7,38 @@
     "homepage": "https://synosys.github.io/teaching/complex-systems-course/",
     "repository": {
         "type": "git",
-        "url": "https://github.com/dirkbrockmann/complex-systems-course.git""version": "1.0.0",
-        "scripts": {
-            "dev": "astro dev",
-            "start": "astro dev",
-            "build": "astro build",
-            "preview": "astro preview",
-            "astro": "astro"
-        },
-        "dependencies": {
-            "@astrojs/mdx": "^4.2.3",
-            "@astrojs/rss": "^4.0.11",
-            "@astrojs/sitemap": "^3.3.0",
-            "@fontsource-variable/eb-garamond": "^5.2.5",
-            "@fontsource-variable/inter": "^5.2.5",
-            "@fontsource-variable/newsreader": "^5.2.6",
-            "@tailwindcss/vite": "^4.0.17",
-            "astro": "^5.5.6",
-            "d3": "^7.9.0",
-            "d3-widgets": "^1.2.9",
-            "katex": "^0.16.22",
-            "lodash-es": "^4.17.21",
-            "marked": "^15.0.11",
-            "rehype-katex": "^7.0.1",
-            "remark-math": "^6.0.0",
-            "sharp": "^0.34.1",
-            "tailwindcss": "^4.0.17"
-        },
-        "devDependencies": {
-            "@tailwindcss/typography": "^0.5.16",
-            "prettier": "^3.5.3",
-            "prettier-plugin-tailwindcss": "^0.6.11"
-        }
+        "url": "https://github.com/dirkbrockmann/complex-systems-course.git",
+        "version": "1.0.0"
+    },
+    "scripts": {
+        "dev": "astro dev",
+        "start": "astro dev",
+        "build": "astro build",
+        "preview": "astro preview",
+        "astro": "astro"
+    },
+    "dependencies": {
+        "@astrojs/mdx": "^4.2.3",
+        "@astrojs/rss": "^4.0.11",
+        "@astrojs/sitemap": "^3.3.0",
+        "@fontsource-variable/eb-garamond": "^5.2.5",
+        "@fontsource-variable/inter": "^5.2.5",
+        "@fontsource-variable/newsreader": "^5.2.6",
+        "@tailwindcss/vite": "^4.0.17",
+        "astro": "^5.5.6",
+        "d3": "^7.9.0",
+        "d3-widgets": "^1.2.9",
+        "katex": "^0.16.22",
+        "lodash-es": "^4.17.21",
+        "marked": "^15.0.11",
+        "rehype-katex": "^7.0.1",
+        "remark-math": "^6.0.0",
+        "sharp": "^0.34.1",
+        "tailwindcss": "^4.0.17"
+    },
+    "devDependencies": {
+        "@tailwindcss/typography": "^0.5.16",
+        "prettier": "^3.5.3",
+        "prettier-plugin-tailwindcss": "^0.6.11"
     }
+}
