added the Kuramoto Model tutorial

--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
         "@astrojs/react": "^4.3.0",
         "@astrojs/rss": "^4.0.11",
         "@astrojs/sitemap": "^3.3.0",
-        "@explorables/albert_and_carl_friedrich": "^2.0.3",
+        "@explorables/albert_and_carl_friedrich": "^2.0.4",
+        "@explorables/ride_my_kuramotocycle": "^2.0.5",
+        "@explorables/spinwheels": "^2.0.5",
         "@fontsource-variable/eb-garamond": "^5.2.5",
         "@fontsource-variable/inter": "^5.2.5",
         "@fontsource-variable/newsreader": "^5.2.6",
